--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/noahneville/team-profile-generator/issues"
   },
-  "homepage": "https://github.com/noahneville/team-profile-generator#readme"
+  "homepage": "https://github.com/noahneville/team-profile-generator#readme",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
