updated to generate employees based on user input and write it to html

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "inquirer": "^6.5.0"
+  },
   "directories": {
     "lib": "lib",
     "test": "tests"
